# PKGBUILD

./: .gitignore  .gitmodules  README.md  clean.sh
aur_backup/fusesmb/: PKGBUILD
cminpack/: PKGBUILD
conkyclementine-bzr/: PKGBUILD
frapix/: PKGBUILD
gsl-shell-git/: PKGBUILD  truetype.patch
gvim-gc-responsiveness-patch/: PKGBUILD
ipopt-svn/: PKGBUILD
libcoinhsl/: PKGBUILD
libhsl/: PKGBUILD
libnag/: PKGBUILD  libnag.install
metis4/: PKGBUILD
metis4/cmake/: CMakeLists.txt
metis4/cmake/Lib/: CMakeLists.txt
metis4/cmake/Programs/: CMakeLists.txt
metis4/cmake/Test/: CMakeLists.txt
nvidia-bumblebee/: PKGBUILD  nvidia.install
nvidia-utils-bumblebee/: PKGBUILD
ogre-1.8/: PKGBUILD
openni-git/: PKGBUILD
openni2/: PKGBUILD
pcl-ros/: PKGBUILD
pydot/: PKGBUILD
python2-squaremap/: PKGBUILD
pyudt-git/: PKGBUILD
rofi/: PKGBUILD
ros-core/: PKGBUILD  turtlesim_boost153_moc.patch
ros-groovy-household-objects-database-msgs/: PKGBUILD
ros-groovy-manipulation-msgs/: PKGBUILD
ros-groovy-moveit-msgs/: PKGBUILD
ros-groovy-moveit-ros-visualization/: PKGBUILD
ros-groovy-moveit-ros-warehouse/: PKGBUILD
ros-groovy-moveit-setup-assistant/: PKGBUILD
ros-groovy-object-recognition-msgs/: PKGBUILD
ros-groovy-octomap-msgs/: PKGBUILD
ros-groovy-shape-tools/: PKGBUILD
ruby-rake-tasks/: PKGBUILD
ruby-task/: PKGBUILD
sddm-archlinux-theme/: PKGBUILD
shapely/: PKGBUILD
urdfdom-git/: PKGBUILD
vim-gtk/: PKGBUILD
vim-gtk-hg/: PKGBUILD
wildmagic/: PKGBUILD
wine-lol/: D3D-crash.patch  PKGBUILD
wsmp/: PKGBUILD
